	  (written by Eduard Moser and Martin Lehmann)

	* src/g_register.c: Added register call for 
          gnetlist:vams-get-package-attributes

	* src/vams_misc.c: Added file to support vams backend (updated 
	  Makefile.am) (written by Eduard Moser and Martin Lehmann)

	* examples/vams/*: Misc updates to the example files

	* docs/gnetlist.txt: Moved file into docs directory

2000-11-03  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gnetlist.1: Updated manual with all the various backend formats

2000-11-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_netlist.c: Added another call to a post process routine
	  (the routine to remove the uref mangling if that's enabled via
	   rc keyword)

	* src/s_hierarchy.c: Added s_hierarchy_remove_uref_mangling

	* src/s_hierarchy.c: Got hierarchy_uref_rename working right.

	* src/*.c: Renamed "rename" to "mangle" (mainly keyword and variable
	  changes)

	* src/g_rc.c and friends: Added the following keywords:
		hierarchy-netname-seperator
		hierarchy-uref-seperator
		hierarchy-netattrib-seperator
		hierarchy-uref-order
		hierarchy-netname-order
		hierarchy-netattrib-order

	* src/*.c: Wrote the code to use the above new keywords

	* src/g_rc.c: Finally migrated a change from the gschem/src/g_rc.c
	  which fixes a core dump if you mess up a value for a keyword.
	  (pass true size of the lookup table in RETURN_G_RC_MODE)

	* src/s_hierarchy.c: Put some verbose print in for the uref
	  demangling code

2000-11-02  Stefan Petersen  <spe@geda.seul.org>

	* scheme/gnet-pads.scm: Wrapper function applied after request
	  from Roger Williams.

	* scheme/gnet-*.scm: Updated copyright.
	 
2000-10-31  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gnetlist.c: Change the if(f_open...) calls to properly deal with 
	  returned value from f_open

	* src/s_hierarchy.c: Divided up s_hierarchy_create_name into
	  s_hierarchy_create_netname, s_hierarchy_create_uref, and
	  s_hierarchy_create_netattrib functions
